Phase 6. Implemented GuildHall class, topic-based register and dispatch (4)