@@ -1,6 +1,7 @@
 package com.narxoz.rpg.guild;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -14,12 +15,19 @@ public class GuildHall implements GuildMediator {
 
     @Override
     public void register(GuildMember member) {
-        // TODO: add the member to the topic lists it should receive.
+        for (String topic : member.getSubscribedTopics()) {
+            addSubscriber(topic, member);
+        }
     }
 
     @Override
     public void dispatch(String topic, GuildMember from, String payload) {
-        // TODO: notify registered members for the topic without direct colleague calls.
+        List<GuildMember> subscribers = subscribersFor(topic);
+        for (GuildMember member : subscribers) {
+            if (member != from) {
+                member.receive(topic, from, payload);
+            }
+        }
     }
 
     protected void addSubscriber(String topic, GuildMember member) {
@@ -27,6 +35,6 @@ public class GuildHall implements GuildMediator {
     }
 
     protected List<GuildMember> subscribersFor(String topic) {
-        return membersByTopic.getOrDefault(topic, List.of());
+        return membersByTopic.getOrDefault(topic, Collections.emptyList());
     }
 }
